* gcc.c-torture/execute/simd-1.c: Force all use of int to 	32-bit int.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57116 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-13  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* gcc.c-torture/execute/simd-1.c: Force all use of int to
+	32-bit int.
+
 2002-09-10  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* gcc.dg/struct-ret-1.c: Add prototype for exit function and correct
