* config/h8300/fixunssfsi.c: Replace H8/S with H8S. 	* config/h8300/h8300.c: Likewise. 	* config/h8300/h8300.h: Likewise. 	* config/h8300/h8300.md: Likewise. 	* doc/invoke.texi: Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57118 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2002-09-13  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/h8300/fixunssfsi.c: Replace H8/S with H8S.
+	* config/h8300/h8300.c: Likewise.
+	* config/h8300/h8300.h: Likewise.
+	* config/h8300/h8300.md: Likewise.
+	* doc/invoke.texi: Likewise.
+
+2002-09-13  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/h8300/h8300.c (h8300_init_once): Fix formatting.
 
 2002-09-13  Matt Austern  <austern@apple.com>
