pt.c (unify, ARRAY_TYPE): Element type can be more qualified.
cp:
	* pt.c (unify, ARRAY_TYPE): Element type can be more qualified.
testsuite:
	* g++.dg/template/deduce1.C: New test.

From-SVN: r57120

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-13  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/template/deduce1.C: New test.
+
 2002-09-13  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* gcc.c-torture/execute/simd-1.c: Force all use of int to
