--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-13  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* pt.c (unify, ARRAY_TYPE): Element type can be more qualified.
+
 2002-09-13  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* decl.c: Fix comment formatting.
