--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-13  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* ggc-common.c (ggc_mark_roots): Don't iterate NULL hash tables.
+
 2002-09-13  Steve Ellcey  <sje@cup.hp.com>
 
 	* config.gcc (ia64*-*-aix*, ia64*-*-elf*, ia64*-*-freebsd*,
