--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-13  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (toplev.o): Depend on real.h.
+	(print-rtl.o, varasm.o, ifcvt.o): Likewise.
+
 2002-09-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* doc/tm.texi (DBX_OUTPUT_NFUN): Describe.
