* gcc/config/avr/avr.h: Set default options for C++ for avr.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57134 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-10  Theodore A. Roth  <troth@verinet.com>
+
+	* gcc/config/avr/avr.h: Set default options for C++ for avr.
+
 2002-09-13  Richard Henderson  <rth@redhat.com>
 
 	* Makefile.in (toplev.o): Depend on real.h.
