--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-14  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* MAINTAINERS: Update my email address.
+
 2002-09-14  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* MAINTAINERS: Update my email address.
