--- a/gcc/ChangeLog.5
+++ b/gcc/ChangeLog.5
@@ -10795,7 +10795,7 @@ Fri Feb  9 15:05:27 2001  Christopher Faylor <cgf@cygnus.com>
 
 	* config/i386/i386.c (ix86_frame_pointer_required): New.
 	(ix86_setup_frame_addresses): New.
-	(struct machine_funciton): Add accesses_prev_frame.
+	(struct machine_function): Add accesses_prev_frame.
 	* config/i386/i386.h (FRAME_POINTER_REQUIRED): Call
 	ix86_frame_pointer_required.
 	(SUBTARGET_FRAME_POINTER_REQUIRED): New.
