--- a/gcc/ChangeLog.5
+++ b/gcc/ChangeLog.5
@@ -1070,7 +1070,7 @@ Mon Jun 18 15:43:10 CEST 2001  Jan Hubicka  <jh@suse.cz>
 
 2001-06-18  Ben Elliston  <bje@redhat.com>
 
-	* except.c (resolve_fixup_regions): Initialise "cleanup".
+	* except.c (resolve_fixup_regions): Initialize "cleanup".
 
 2001-06-17  Neil Booth  <neil@daikokuya.demon.co.uk>
 
@@ -11587,10 +11587,10 @@ Mon Jan 29 20:38:19 2001  Christopher Faylor <cgf@cygnus.com>
 
 	* loop.c (loop_giv_reduce_benefit): Copy mode size into
 	int variable.
-	(check_ext_dependant_givs): Initialise u_start_val and
+	(check_ext_dependant_givs): Initialize u_start_val and
 	u_end_val.
 	(load_mems): Make last_max_reg unsigned.
-	(try_swap_copy_prop): Use INSN_P and initialise set.
+	(try_swap_copy_prop): Use INSN_P and initialize set.
 
 Fri Jan 26 23:22:58 2001  Denis Chertykov  <denisc@overta.ru>
 
@@ -12892,7 +12892,7 @@ Fri Jan 12 00:04:00 MET 2001  Jan Hubicka  <jh@suse.cz>
 
 2001-01-10  Nick Clifton  <nickc@redhat.com>
 
-	* config/d30v/d30v.c (d30v_init_machine_status): Initialise
+	* config/d30v/d30v.c (d30v_init_machine_status): Initialize
 	machine_function structure to zero.
 	Add prototypes for machine_status functions.
 
@@ -13097,7 +13097,7 @@ Wed Jan 10 16:38:31 MET 2001  Jan Hubicka  <jh@suse.cz>
 	* config/d30v/d30v.h (struct_machine): Move here.
 	Add eh_epilogue_sp_ofs field.
 
-	*config/d30v/d30v.md (epilogue): Initialise eh_epilogue_sp_ofs
+	*config/d30v/d30v.md (epilogue): Initialize eh_epilogue_sp_ofs
 	field in cfun->machine structure.
 
 Tue Jan  9 21:34:57 2001  John David Anglin  <dave@hiauly1.hia.nrc.ca>
@@ -13264,7 +13264,7 @@ Tue Jan  9 21:25:19 2001  Jeffrey A Law  (law@cygnus.com)
 20001-01-09  Graham Stott  <grahams@redhat.com>
 
 	* cppfiles.c (_cpp_execute_include): Move `len` initialisation
-	after `ptr` is initialised.
+	after `ptr` is initialized.
 
 2001-01-09  Alexandre Oliva  <aoliva@redhat.com>
 
