--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-14  Marek Michalkiewicz  <marekm@amelek.gda.pl>
+
+	* config/avr/avr.c (output.h): Move after inclusion of tree.h.
+
 2002-09-14  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* ChangeLog: Follow spelling conventions.
