--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-09-14  Adam Megacz <adam@xwt.org>
+	
+	* java/net/natPlainDatagramSocket.cc: removed #include
+	<ws2tcpip.h>; the mingw header is broken (conflicts with itself).
+	* include/win32.h: included definition for IP_TOS to satisfy
+	natPlainDatagramSocket.cc
+	
 2002-09-13  Michael Koch  <konqueror@gmx.de>
 	
 	* java/net/DatagramPacket.java (DatagramPacket):
