re PR c++/7768 (__PRETTY_FUNCTION__ for template destructor is wrong)
cp:
	PR c++/7768
	* pt.c (build_template_decl): Copy DECL_DESTRUCTOR_P.
testsuite:
	* g++.dg/template/pretty1.C: New test

From-SVN: r57152

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-14  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/7768
+	* pt.c (build_template_decl): Copy DECL_DESTRUCTOR_P.
+
 2002-09-14  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* error.c: Fix comment formatting.
