* config.gcc (*-*-netbsd*): Set thread_file to 'posix' for --enable-threads=yes and --enable-threads=posix.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57163 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-15  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config.gcc (*-*-netbsd*): Set thread_file to 'posix'
+	for --enable-threads=yes and --enable-threads=posix.
+
 2002-09-15  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/sparc/cypress.md: Replace Sparc with SPARC.
