* config/netbsd.h (LIB_SPEC): Include the appropriate pthread library if -pthread is specified.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57164 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-09-15  Jason Thorpe  <thorpej@wasabisystems.com>
 
+	* config/netbsd.h (LIB_SPEC): Include the appropriate pthread
+	library if -pthread is specified.
+
+2002-09-15  Jason Thorpe  <thorpej@wasabisystems.com>
+
 	* config.gcc (*-*-netbsd*): Set thread_file to 'posix'
 	for --enable-threads=yes and --enable-threads=posix.
 
